--- a/src/app/core/theme/user/user.component.html
+++ b/src/app/core/theme/user/user.component.html
@@ -11,6 +11,16 @@
 					<span class="material-icons">home</span>
 				</a>
 			</li>
+			<li class="nav__li">
+				<a
+					routerLinkActive="_activeLink"
+					(click)="showSidebar = false"
+					routerLink="/players"
+					class="nav__a"
+				>
+					<span class="material-icons">group</span>
+				</a>
+			</li>
 			<li class="nav__li _burger" (click)="showSidebar = !showSidebar">
 				<a class="nav__toggle" [class._active]="showSidebar">
 					<span class="nav__toggle-line"></span>
@@ -88,6 +98,17 @@
 					<span translate>Theme.Translates</span>
 				</a>
 				<hr *ngIf="us.role('admin')" />
+				<a
+					[routerLinkActiveOptions]="{ exact: true }"
+					routerLinkActive="_activeLink"
+					routerLink="/manage/players"
+					class="nav__burger-link"
+					(click)="hideSidebar()"
+				>
+					<span class="material-icons">group</span>
+					<span translate>Theme.Players</span>
+				</a>
+				<hr />
 			</div>
 		</div>
 		<router-outlet></router-outlet>
